# rdflib-rdna

./: .coveragerc  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  docs.rst  index.rst  rdf-dataset-canonicalisation.md
rdflib_rdna/: __init__.py  rdna.py
test/: __init__.py  manifest.py  test_bnode_contexts.py  test_dataset_canonicalization.py  test_identifierissuers.py  test_rdna_examples.py  timbl-card-canonicalized.nquads  timbl-card-canonicalized.ntriples  timbl-card.trig
test/dataset-canonicalization/: index.html  manifest-rdna.jsonld  manifest-rdna.ttl  manifest.csv  manifest.jsonld  manifest.ttl  template.haml  test004-in.trig  test015-in.nq  test015-rdna.nq  test039-rdna.nq  test046-rdna.nq  test049-in.nq  test049-rdna.nq  test054-rdna.nq  test059-rdna.nq  vocab.html  vocab.jsonld  vocab.ttl
